--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
   <div class="content">
     <h2>Qualitative Comparison on SPair-71k</h2>
-    <h3>From left to right: SD+DINO, SD+DINO (S), and Ours. Our method particularly shines at large viewpoint variations.</h3>
+    <h3>From left to right: SD+DINO, SD+DINO supervised version (S), and Ours. <br> Our method particularly shines in cases with large viewpoint variations.</h3>
     <img class="summary-img" src="./files/supp_spair_qual1.png" style="width:100%;">
     <br>
     <img class="summary-img" src="./files/supp_spair_qual2.png" style="width:100%;">
