--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p style="text-align: center;">
         <!-- <a href="files/NIPS_23_Fusing_SD_DINO_cr.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/NIPS_23_Fusing_SD_DINO_cr_supp.pdf" target="_blank">[Supp.]</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-        <a href="https://arxiv.org/abs/2305.15347" target="_blank">[Arxiv (coming soon)]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://arxiv.org/abs/2311.17034" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://github.com/Junyi42/sd-dino" target="_blank">[Code (coming soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
@@ -338,7 +338,7 @@
     <code> @article{zhang2023telling,<br>
   &nbsp;&nbsp;title={Telling Left from Right: Identifying Geometry-Aware Semantic Correspondence},<br>
   &nbsp;&nbsp;author={Zhang, Junyi and Herrmann, Charles and Hur, Junhwa and Chen, Eric and Jampani, Varun and Sun, Deqing and Yang, Ming-Hsuan},<br>
-  &nbsp;&nbsp;booktitle={arXiv preprint},<br>
+  &nbsp;&nbsp;booktitle={arXiv preprint arxiv:2311.17034},<br>
   &nbsp;&nbsp;year={2023}<br>
   } </code>
   </div>
