--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         <a href="https://illinois.edu/"><sup>3</sup> UIUC</a>
         <a href="https://stability.ai/"><sup>4</sup> Stability AI</a> 
         <a href="https://www.ucmerced.edu/"><sup>5</sup> UC Merced</a></span>
-          <!-- add publication NeurIPS 2023
       <br><br>
-      <span class="conference">NeurIPS 2023</span> -->
+      <span class="conference"><em>CVPR 2024</em></span>
     </p>
     
     <br>
