--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     </a>
     <font size="+2">
       <p style="text-align: center;">
-        <a href="files/Telling_Left_from_Right_arxiv.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="files\Telling_Left_from_Right_cr.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <!-- <a href="files/NIPS_23_Fusing_SD_DINO_cr_supp.pdf" target="_blank">[Supp.]</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
         <a href="https://arxiv.org/abs/2311.17034" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/Junyi42/sd-dino" target="_blank">[Code (coming soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/Junyi42/sd-dino" target="_blank">[Code (very soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
     </font>
