--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <a href="https://varunjampani.github.io/">Varun Jampani<sup>4</sup></a>
       </span>
       <span>
-        <a href="https://deqings.github.io/">Deqing Sun<sup>2</sup></a>
+        <a href="https://deqings.github.io/">Deqing Sun<sup>2 *</sup></a>
       </span>
       <span>
-        <a href="https://faculty.ucmerced.edu/mhyang/">Ming-Hsuan Yang<sup>2,5</sup></a>
+        <a href="https://faculty.ucmerced.edu/mhyang/">Ming-Hsuan Yang<sup>2,5 *</sup></a>
       </span>
       <br>
       <span class="institution"><a href="https://www.sjtu.edu.cn/"><sup>1</sup> Shanghai Jiao Tong University</a> 
@@ -56,7 +56,10 @@
         <a href="https://illinois.edu/"><sup>3</sup> UIUC</a>
         <a href="https://stability.ai/"><sup>4</sup> Stability AI</a> 
         <a href="https://www.ucmerced.edu/"><sup>5</sup> UC Merced</a></span>
-      <br><br>
+        <span class="institution"></span>
+      <span class="institution">(*: equal contribution)</span>
+      <br>
+      <br>
       <span class="conference"><em>CVPR 2024</em></span>
     </p>
     
