--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         <span class="institution"></span>
       <span class="institution">(*: equal contribution)</span>
       <br>
-      <br>
       <span class="conference"><em>CVPR 2024</em></span>
     </p>
     
@@ -96,10 +95,9 @@
     </a>
     <font size="+2">
       <p style="text-align: center;">
-        <a href="files\Telling_Left_from_Right_cr.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <!-- <a href="files/NIPS_23_Fusing_SD_DINO_cr_supp.pdf" target="_blank">[Supp.]</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+        <a href="files\Telling_Left_from_Right_cr.pdf" target="_blank">[Paper (<font color="#C70039">updated</font>)]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://arxiv.org/abs/2311.17034" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/Junyi42/sd-dino" target="_blank">[Code (very soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/Junyi42/geoaware-sc" target="_blank">[Code (<font color="#C70039">new!</font>)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
     </font>
