update concurrent work

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
   <p style="margin-top:5px; margin-bottom:5px;">[1] <a href="https://sd-complements-dino.github.io/">A Tale of Two Features: Stable Diffusion Complements DINO for Zero-Shot Semantic Correspondence</a></p>
   <p style="margin-top:5px; margin-bottom:5px;">[2] <a href="https://diffusionfeatures.github.io/">Emergent Correspondence from Image Diffusion</a></p>
   <p style="margin-top:5px; margin-bottom:5px;">[3] <a href="https://diffusion-hyperfeatures.github.io/">Diffusion Hyperfeatures: Searching Through Time and Space for Semantic Correspondence</a></p>
+  <p style="margin-top:5px; margin-bottom:5px;">[Concurrent] <a href="https://arxiv.org/abs/2312.13216">Improving Semantic Correspondence with Viewpoint-Guided Spherical Maps</a> improves the geometric ambiguity in an unsupervised manner by introducing a spherical constraint on the feature space.</p>
 </div>
 
   <div class="content">
