--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
       <div><strong>(c)</strong> Qualitative comparison with state-of-the-art methods in cases with extreme viewpoint variations.</div>
   </div>
     <br>
-    <!-- <font size="+1">
-    <h3 style="text-align:center"><center>Semantic correspondence with fused Stable Diffusion and DINO features.</center></h3>
-    </font> -->
+
     <a style="text-align:center">
       <strong>In Fig. (a)</strong>, we demonstrate that the state-of-the-art method, SD+DINO, fails at matching keypoints with geometric ambiguity, or “telling left from right”. 
       <strong>In Fig. (b)</strong>, we show the performance gap between our proposed geometry-aware subset (Geo.) and the standard set (Std.) of state-of-the-art methods. 
@@ -108,8 +106,8 @@
     <p>While pre-trained large-scale vision models have shown significant promise for semantic correspondence, their features often struggle to grasp the geometry and orientation of instances. 
       This paper identifies the importance of being geometry-aware for semantic correspondence and reveals a limitation of the features of current foundation models under simple post-processing. 
       We show that incorporating this information can markedly enhance semantic correspondence performance with simple but effective solutions in both zero-shot and supervised settings. 
-      We also construct a new challenging benchmark for semantic correspondence built from an existing animal pose estimation dataset, for both pre-training validating models. Our method achieves a PCK@0.10 score of <strong>64.2</strong> (zero-shot) and <strong>85.6</strong> (supervised) on the challenging SPair-71k dataset, outperforming the state-of-the-art by 4.3p and 11.0p absolute gains, respectively. 
-      Our code and datasets will be publicly available.</p>
+      We also construct a new challenging benchmark for semantic correspondence built from an existing animal pose estimation dataset, for both pre-training validating models. Our method achieves a PCK@0.10 score of <strong>65.4</strong> (zero-shot) and <strong>85.6</strong> (supervised) on the challenging SPair-71k dataset, outperforming the state-of-the-art by 5.5p and 11.0p absolute gains, respectively. 
+      Our code and datasets are publicly available.</p>
   </div>
 
 
