update bibtex and twitter post link

--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
     </a>
     <font size="+2">
       <p style="text-align: center;">
-        <a href="files\Telling_Left_from_Right_cr.pdf" target="_blank">[Paper (<font color="#C70039">updated</font>)]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="files\Telling_Left_from_Right_cr.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://arxiv.org/abs/2311.17034" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/Junyi42/geoaware-sc" target="_blank">[Code (<font color="#C70039">new!</font>)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/Junyi42/geoaware-sc" target="_blank">[Code]</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://x.com/junyi42/status/1770799360353145037" target="_blank">[Twitter Post]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
     </font>
