--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <a href="https://arxiv.org/abs/2311.17034" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://github.com/Junyi42/geoaware-sc" target="_blank">[Code]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://x.com/junyi42/status/1770799360353145037" target="_blank">[Twitter Post]</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.youtube.com/watch?v=fyhg50qlNW8" target="_blank">[Video]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
     </font>
